Extend docs generated for /:city PUT endpoint. Add example responses
