# packages/api/src/swagger/autogen.ts
@@ -1,5 +1,13 @@
 import swaggerAutogen from 'swagger-autogen'
 
+const city = {
+  id: 1,
+  name: 'London',
+  country: 'United Kingdom',
+  visited: false,
+  wishlist: true,
+}
+
 const doc = {
   info: {
     version: '0.1.0',
@@ -7,6 +15,10 @@ const doc = {
     description: 'Smartpension Traveller Rest API',
   },
   host: 'localhost:4000',
+  definitions: {
+    City: city,
+    Cities: [city],
+  },
 }
 
 const outputFile = './src/swagger/output.json'
